♻️ refactor: add o server no auth removido os /api/v1
Ajuste na melhoria da documentação do swagger
